// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregationFilters does not render aggregations when numberOfResults is 0 1`] = `""`;

exports[`AggregationFilters does not render aggregations with empty buckets 1`] = `
<div
  className="bg-white pa3"
>
  <div
    key="agg1"
  >
    <Connect(EventTracker)
      eventId="Facet-Aggregation 1"
      eventPropName="onChange"
    >
      <AggregationFilter
        buckets={
          Immutable.List [
            Immutable.Map {},
          ]
        }
        name="Aggregation 1"
        onChange={[Function]}
        range={false}
      />
    </Connect(EventTracker)>
  </div>
</div>
`;

exports[`AggregationFilters renders with all props set 1`] = `
<div
  className="bg-white pa3"
>
  <div
    key="agg1"
  >
    <Connect(EventTracker)
      eventId="Facet-Aggregation 1"
      eventPropName="onChange"
    >
      <AggregationFilter
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 1,
            },
          ]
        }
        name="Aggregation 1"
        onChange={[Function]}
        range={false}
        selections="foo"
      />
    </Connect(EventTracker)>
  </div>
  <div
    key="agg2"
  >
    <Connect(EventTracker)
      eventId="Facet-Aggregation 2"
      eventPropName="onChange"
    >
      <AggregationFilter
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo_2",
              "doc_count": 1,
            },
          ]
        }
        name="Aggregation 2"
        onChange={[Function]}
        range={false}
        splitDisplayName={true}
      />
    </Connect(EventTracker)>
  </div>
</div>
`;

exports[`AggregationFilters renders with range aggregation (earliest_date) 1`] = `
<div
  className="bg-white pa3"
>
  <div
    key="earliest_date"
  >
    <Connect(EventTracker)
      eventId="Facet-Range Aggregation"
      eventPropName="onChange"
    >
      <AggregationFilter
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "2000",
              "doc_count": 1,
            },
            Immutable.Map {
              "key": "2001",
              "doc_count": 1,
            },
          ]
        }
        name="Range Aggregation"
        onChange={[Function]}
        range={true}
      />
    </Connect(EventTracker)>
  </div>
</div>
`;
